Finished Architecture & Code Styling

--- a/Architecture & Code Styling - Exercise/RentACar/views/layouts/main.hbs
+++ b/Architecture & Code Styling - Exercise/RentACar/views/layouts/main.hbs
@@ -37,6 +37,7 @@
                 </li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
+                <li><a href="/userProfie/{{currentUser.id}}">Profile</a></li>
             </ul>
         </header>
         <main>
